cadastro de certificação e trilha

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,8 +8,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
               <a class="nav-item nav-link active" routerLink="home">Home <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="../html/home-1.html">Certificações</a>
-              <a class="nav-item nav-link" href="../html/trilha-certificacao.html">Trilhas</a>
+              <a class="nav-item nav-link" routerLink="cert/registrar">Certificações</a>
+              <a class="nav-item nav-link" routerLink="cert/trilha">Trilhas</a>
           </div>
       </div>
   </nav>
